<resources>
    <string name="app_name">Seruen</string>
    <string name="gp1_text1">What this app?</string>
    <string name="gp1_text2"> Your best trip everyday.</string>
    <string name="gp2_text1">Why this app?</string>
    <string name="gp2_text2">Extraordinary trip to get you going.</string>
    <string name="gp3_text1">How use it?</string>
    <string name="gp3_text2">Follow trip and do your journey.</string>
    <string name="uip_header">Choose your interests</string>
    <string name="uip_button">OK</string>
    <string name="lp_hint1">Email</string>
    <string name="lp_hint2">Password</string>
    <string name="lp_hint3">Name</string>
    <string name="lp_hint4">Password again</string>
    <string name="lp_signin_button">Sign In</string>
    <string name="lp_signup_button">Sign Up</string>
    <string name="mp1_apportion">Apportion</string>
    <string name="mp1_trip">Trip</string>
    <string name="mp1_ar">AR</string>
    <string name="mp1_map">Map</string>
    <string name="mp1_places">Places</string>
    <string name="trip_button">Trip</string>
    <string name="delete_button">Delete</string>
    <string name="exit_button">Exit</string>
    <string name="try_button">Try</string>
    <string name="change_button">Change</string>
    <string name="change_lang_button">Change Language</string>
    <string name="skip_button">SKIP</string>
    <string name="get_started_button">GET STARTED</string>
    <string name="mp2_header">Trip</string>
    <string name="map2_et_from">From</string>
    <string name="map2_et_to">To</string>
    <string name="pp1_search">Search</string>
    <string name="pp2_header">Basket</string>
    <string name="sp_main">Main Settings</string>
    <string name="sp_about">About</string>
    <string name="sp_lang">Language:</string>
    <string name="sp_lang_kaz">Kazakh</string>
    <string name="sp_lang_eng">English</string>
    <string name="sp_lang_rus">Russian</string>
    <string name="sp_back">Background:</string>
    <string name="sp_notification">Notification</string>
    <string name="sp_not_switch">On</string>
    <string name="sp_ui">Interests:</string>
    <string name="sp_about_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in velit eu nunc lobortis fringilla. Suspendisse eget luctus diam. Fusce efficitur ligula vel augue rhoncus egestas. Integer vitae tellus blandit, tempor odio quis, vulputate tortor.</string>
    <string name="mapbox_access_token">pk.eyJ1Ijoid2FzZHgxOSIsImEiOiJjam9jMnZncHgwaXU4M3ZuMng2eHJxZGNuIn0.DVWyHsSyt7-IrnMy3VUcAA</string>

    <string name="GP1">GP1</string>
    <string name="GP2">GP2</string>
    <string name="GP3">GP3</string>
    <string name="sign_up_now">Sign up now</string>

</resources>




