<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Fragments.SettingPageFragments.SettingsPageFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">


        <!--HEADER SECTION-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient2">
            <RelativeLayout
                android:id="@+id/status_bar"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/headerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimary"
                    android:fontFamily="@font/fut_med"
                    android:textSize="20sp" />
            </RelativeLayout>
        </LinearLayout>


        <!--BODY SECTION-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/sp_main"
                        android:textColor="@color/color666"
                        android:fontFamily="@font/fut_med"
                        android:textSize="17sp" />

                    <RelativeLayout
                        android:id="@+id/main_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_angles">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="93dp"
                            android:layout_height="21dp"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/sp_lang"
                            android:textColor="@color/color666" />

                        <Button
                            android:id="@+id/change_lang"
                            android:layout_width="wrap_content"
                            android:layout_height="20dp"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="23dp"
                            android:layout_marginTop="9dp"
                            android:layout_toEndOf="@+id/textView"
                            android:background="@drawable/rounded_angels2"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/change_lang_button"
                            android:textColor="@color/GP_GC_1"
                            android:textSize="11sp" />

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="13dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/sp_back"
                            android:textColor="@color/color666" />

                        <ImageButton
                            android:id="@+id/imageButton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="34dp"
                            android:layout_marginTop="43dp"
                            android:layout_toEndOf="@+id/textView8"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/fut_med"
                            android:src="@drawable/optimised21" />

                        <TextView
                            android:id="@+id/textView10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="6dp"
                            android:layout_marginTop="42dp"
                            android:layout_toEndOf="@+id/imageButton2"
                            android:fontFamily="@font/fut_med"
                            android:text="Default"
                            android:textColor="@color/color666" />

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView8"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/sp_notification"
                            android:textColor="@color/color666" />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView10"
                            android:layout_marginStart="40dp"
                            android:layout_marginTop="9dp"
                            android:layout_toEndOf="@+id/textView11"
                            android:background="@android:color/transparent"
                            android:fontFamily="@font/fut_med"
                            android:scaleX="0.85"
                            android:scaleY="0.85"
                            android:text="@string/sp_not_switch"
                            android:textColor="@color/color666"
                            android:thumbTint="@color/GP_GC_1" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textView11"
                            android:layout_marginStart="9dp"
                            android:layout_marginTop="12dp"
                            android:fontFamily="@font/fut_med"
                            android:layout_marginBottom="15dp"
                            android:text="@string/sp_ui"
                            android:textColor="@color/color666" />

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="50dp"
                            android:layout_height="20dp"
                            android:layout_below="@+id/switch1"
                            android:layout_marginStart="56dp"
                            android:layout_marginTop="7dp"
                            android:layout_toEndOf="@+id/textView12"
                            android:background="@drawable/rounded_angels2"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/change_button"
                            android:textColor="@color/GP_GC_1"
                            android:textSize="11sp" />

                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sp_about"
                        android:layout_marginLeft="10dp"
                        android:fontFamily="@font/fut_med"
                        android:textColor="@color/color666"
                        android:textSize="17sp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/rounded_angles">

                        <TextView
                            android:id="@+id/about_set"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/sp_about_text"
                            android:textColor="@color/color666"
                            android:fontFamily="@font/fut_med" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/exitButton"
                android:layout_width="62dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="124dp"
                android:layout_marginTop="394dp"
                android:layout_marginEnd="135dp"
                android:background="@drawable/rounded_angles"
                android:text="@string/exit_button"
                android:fontFamily="@font/fut_med"
                android:textColor="@color/GP_GC_1" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>