<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activities.GuidePageActivities.GuidePage1">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        app:srcCompat="@drawable/earthlogo" />

    <TextView
        android:id="@+id/GP1_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:fontFamily="@font/fut_med"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/GP1_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="286dp"
        android:layout_marginBottom="186dp"
        android:fontFamily="@font/fut_med"
        android:text="@string/gp1_text1"
        android:textColor="@color/colorPrimary"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/GP1_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="328dp"
        android:layout_marginBottom="163dp"
        android:fontFamily="@font/fut_med"
        android:text="@string/gp1_text2"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

</RelativeLayout>



