<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activities.SignUpActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        app:srcCompat="@drawable/enter" />

    <TextView
        android:id="@+id/GP_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="179dp"
        android:fontFamily="@font/fut_med"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/sloginField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lp_hint1"
                android:ems="10"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/nameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lp_hint3"
                android:ems="10"
                android:inputType="text"/>

            <EditText
                android:id="@+id/spasswordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lp_hint2"
                android:ems="10"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/passwordCheckField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lp_hint4"
                android:ems="10"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/GP_GC_1"
                    app:srcCompat="@drawable/googleg_standard_color_18" />

                <ImageButton
                    android:id="@+id/imageButton8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/GP_GC_1"
                    app:srcCompat="@drawable/googleg_standard_color_18" />

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/GP_GC_1"
                    app:srcCompat="@drawable/googleg_standard_color_18" />
            </LinearLayout>

            <Button
                android:id="@+id/button_signUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sign Up"
                android:textColor="@color/GP_GC_1"
                android:fontFamily="@font/fut_med"
                android:background="@drawable/rounded_angles"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>