<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_m_p_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Fragments.HomePageFragments.HomePageFragment1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="vertical">


        <!--HEADER SECTION-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient2">

            <TextView
                android:id="@+id/headerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/fut_med"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />
        </RelativeLayout>


        <!--BODY SECTION-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!--Apportion field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:focusableInTouchMode="true"
                        android:background="@drawable/rounded_angles"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/apportionName_tv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/mp1_apportion"
                            android:textColor="@android:color/black" />

                        <GridLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="9dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="9dp"
                            android:columnCount="4">


                            <ImageView
                                android:id="@+id/imageView15"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="fill_vertical"
                                android:src="@drawable/optimised10" />

                            <EditText
                                android:id="@+id/editText7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:ems="9"
                                android:fontFamily="@font/fut_med"
                                android:hint="Date:"
                                android:textColorHint="@color/color979797"
                                android:textColor="@color/GP_GC_1"
                                android:singleLine="true"
                                android:textSize="14dp" />

                            <ImageView
                                android:id="@+id/imageView16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="fill_vertical"
                                android:src="@drawable/optimised11" />

                            <EditText
                                android:id="@+id/editText8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="5dp"
                                android:ems="10"
                                android:fontFamily="@font/fut_med"
                                android:hint="Date:"
                                android:textColorHint="@color/color979797"
                                android:singleLine="true"
                                android:textColor="@color/GP_GC_1"
                                android:textSize="14dp" />

                            <ImageView
                                android:id="@+id/imageView17"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="fill_vertical"
                                android:src="@drawable/optimised12" />

                            <EditText
                                android:id="@+id/editText9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:ems="9"
                                android:fontFamily="@font/fut_med"
                                android:hint="Date:"
                                android:textColorHint="@color/color979797"
                                android:singleLine="true"
                                android:textColor="@color/GP_GC_1"
                                android:textSize="14dp" />

                            <ImageView
                                android:id="@+id/imageView18"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="fill_vertical"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/map" />

                            <EditText
                                android:id="@+id/editText10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="5dp"
                                android:ems="10"
                                android:fontFamily="@font/fut_med"
                                android:hint="Date:"
                                android:textColorHint="@color/color979797"
                                android:singleLine="true"
                                android:textColor="@color/GP_GC_1"
                                android:textSize="14dp" />
                        </GridLayout>

                        <Button
                            android:id="@+id/bex_trip"
                            android:layout_width="45dp"
                            android:layout_height="20dp"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:layout_marginRight="9dp"
                            android:layout_marginBottom="5dp"
                            android:background="@drawable/rounded_angles"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/trip_button"
                            android:textAlignment="center"
                            android:textColor="@color/GP_GC_1"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <!--ArFragment field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_angles"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/mp1_ar"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:fontFamily="@font/fut_med"
                            android:text="TextView" />
                    </LinearLayout>

                    <!--Map field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/rounded_angles"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/mp1_map"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:fontFamily="@font/fut_med"
                            android:text="TextView" />
                    </LinearLayout>

                    <!--Places field-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_angles"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="10dp"
                            android:fontFamily="@font/fut_med"
                            android:text="@string/mp1_places"
                            android:textColor="@android:color/black" />

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:fontFamily="@font/fut_med"
                            android:text="TextView" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>


    </LinearLayout>
</RelativeLayout>